--- a/myplatform/roles/basic/tasks/main.yml
+++ b/myplatform/roles/basic/tasks/main.yml
@@ -1,5 +1,5 @@
 - name: "FTP Zena installer files to Agents Server Nodes"
-  copy: src=../files/zenainstaller/ dest=/tmp/zenainstaller/ owner=root group=root mode=0775
+  copy: src=/home/mior/myplatform/roles/basic/files/zenainstaller/ dest=/tmp/zenainstaller/ owner=root group=root mode=0775
 - name: "Make Sure Unzip Installed on Nodes"
   yum: name=unzip state=present
 - name: "Installing Zena Controller"
