--- a/myplatform/roles/basic/tasks/main.yml
+++ b/myplatform/roles/basic/tasks/main.yml
@@ -1,3 +1,7 @@
+- name: "Checking Host"
+  command: hostname
+- name: "Checking pwd"
+  command: pwd
 - name: "Copy Zena installer files to Agents Server Nodes"
   copy: src=../../../../../../mnt/nfs/var/nfs/zenainstaller/ dest=/tmp/zenainstaller/ owner=root group=root mode=0775
 - name: "Make Sure Unzip Installed on Nodes"
