--- a/myplatform/roles/basic/tasks/main.yml
+++ b/myplatform/roles/basic/tasks/main.yml
@@ -2,8 +2,10 @@
   command: hostname
 - name: "Checking pwd"
   command: pwd
+- name: "Checking dir"
+  command: 'mkdir /tmp/zenainstaller'
 - name: "Copy Zena installer files to Agents Server Nodes"
-  copy: src=../../../../../../mnt/nfs/var/nfs/zenainstaller/ dest=/tmp/zenainstaller/ owner=root group=root mode=0775
+  synchronize: src=/var/nfs/zenainstaller/ dest=/tmp/zenainstaller/
 - name: "Make Sure Unzip Installed on Nodes"
   yum: name=unzip state=present
 - name: "Installing Zena Controller"
