--- a/myplatform/roles/basic/tasks/main.yml
+++ b/myplatform/roles/basic/tasks/main.yml
@@ -1,11 +1,11 @@
-- name: "Checking Host"
+- name: "Checking hostname at nodes"
   command: hostname
-- name: "Checking pwd"
+- name: "Checking pwd at nodes"
   command: pwd
-- name: "Checking dir"
-  command: 'mkdir /tmp/zenainstaller'
-- name: "Copy Zena installer files to Agents Server Nodes"
-  synchronize: src=/var/nfs/zenainstaller/ dest=/tmp/zenainstaller/
+- name: "Copy Zena installer files to Agents Server Nodes from share"
+  shell: 'cp -R /mnt/nfs/var/nfs/zenainstaller /tmp'
+- name: "Chmod 775 copied installer"
+  shell: 'chmod -R 775 /tmp/zenainstaller'
 - name: "Make Sure Unzip Installed on Nodes"
   yum: name=unzip state=present
 - name: "Installing Zena Controller"
