--- a/myplatform/roles/basic/tasks/main.yml
+++ b/myplatform/roles/basic/tasks/main.yml
@@ -8,11 +8,8 @@
   shell: 'chmod -R 775 /tmp/zenainstaller'
 - name: "Make Sure Unzip Installed on Nodes"
   yum: name=unzip state=present
-- name: "Installing Zena Controller"
-  shell: /tmp/zenainstaller/Controller/install.bin
-  ignore_errors: True
-- name: "Installing Zena Agent"
-  shell: /tmp/zenainstaller/Agent/install.bin
+- name: "Updating Zena Agent to 3.2.2.480"
+  shell: /tmp/zenainstaller/Agent480/install.bin
 - name: "Do Zena Agent installed?"
   shell: 'more /opt/zena/agent/xagent_1.log'
 - name: "Status for Zena Agent is running..."
