--- a/myplatform/roles/basic/tasks/main.yml
+++ b/myplatform/roles/basic/tasks/main.yml
@@ -8,9 +8,13 @@
   shell: 'chmod -R 775 /tmp/zenainstaller'
 - name: "Make Sure Unzip Installed on Nodes"
   yum: name=unzip state=present
+- name: "Stop Zena old Agent"
+  shell: '/opt/zena/bin/LINUX64/zenastat stop agent_1'
 - name: "Updating Zena Agent to 3.2.2.480"
   shell: /tmp/zenainstaller/Agent480/install.bin
   ignore_errors: True
+- name: "Start new Zena Agent"
+  shell: '/opt/zena/bin/LINUX64/zenastat start agent_1'
 - name: "Do Zena Agent installed?"
   shell: 'more /opt/zena/agent/xagent_1.log'
 - name: "Status for Zena Agent is running..."
